syntax = "proto2";

package core.circuits;

message Gate {
    enum GateType {
        XOR = 0;
        AND = 1;
        INV = 2;
    }
    required uint32 id = 1;
    required uint32 xref = 2;
    required uint32 yref = 3;
    required uint32 zref = 4;
    required GateType gate_type = 5;
}

message Group {
    enum ValueType {
        ConstZero = 0;
        ConstOne = 1;
        Bool = 2;
        Bits = 3;
        Bytes = 4;
        U8 = 5;
        U16 = 6;
        U32 = 7;
        U64 = 8;
        U128 = 9;
    }
    required uint32 index = 1;
    required string id = 2;
    required string desc = 3;
    required ValueType value_type = 4;
    repeated uint32 wires = 5;
}

message Circuit {
    required string id = 1;
    required string description = 2;
    required string version = 3;
    required string bit_order = 4;
    required uint32 wire_count = 5;
    required uint32 and_count = 6;
    required uint32 xor_count = 7;
    repeated Group inputs = 8;
    repeated Group outputs = 9;
    repeated Gate gates = 10;
}